--- a/CustmomerManagementClient/Pages/Index.cshtml
+++ b/CustmomerManagementClient/Pages/Index.cshtml
@@ -2,17 +2,13 @@
 @model CustomerManagementClient.Pages.IndexModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@{
-    ViewData["Title"] = "Customer Management";
-}
-
 @Html.AntiForgeryToken()
 
 <div class="container">
-    <h1 class="my-4">@ViewData["Title"]</h1>
+    <h1 class="my-4">@Model.PageTitle</h1>
 
     <div class="mb-3">
-        <button class="btn btn-success" hx-post="@Url.Page("/Index", pageHandler: "SaveChanges")" hx-trigger="click" hx-target="#modalContainer" hx-swap="innerHTML">
+        <button class="btn btn-success" hx-post="@Url.Page("/Index", pageHandler: "SaveChanges")" hx-target="#modalContainer" hx-swap="innerHTML">
             <i class="fa fa-save"></i> Save Changes
         </button>
     </div>
