--- a/CustmomerManagementClient/Pages/Shared/_Layout.cshtml
+++ b/CustmomerManagementClient/Pages/Shared/_Layout.cshtml
@@ -17,5 +17,8 @@
     <!-- Include Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     @RenderSection("Scripts", required: false)
+
+    <!-- Include site.js script -->
+    <script src="~/js/site.js"></script>
 </body>
 </html>
