--- a/CustmomerManagementClient/wwwroot/css/site.css
+++ b/CustmomerManagementClient/wwwroot/css/site.css
@@ -9,14 +9,35 @@
 
 /* Background colors for different states */
 tr.added {
+    z-index: 2;
     background-color: lightgreen;
 }
 
 tr.edited {
+    z-index: 2;
     background-color: orange;
 }
 
 tr.deleted {
+    z-index: 2;
     background-color: lightcoral;
     text-decoration: line-through;
+}
+
+.spinner-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8); /* Optional: Light overlay for better visibility */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    pointer-events: none; /* Allows interaction with underlying elements when spinner is hidden */
+}
+
+.d-none {
+    display: none !important;
 }
