--- a/CustmomerManagementClient/Pages/Index.cshtml
+++ b/CustmomerManagementClient/Pages/Index.cshtml
@@ -8,11 +8,12 @@
     <h1 class="my-4">@Model.PageTitle</h1>
 
     <div class="mb-3">
-        <button class="btn btn-success"
+        <button id="saveChangesButton" class="btn btn-success"
                 hx-post="@Url.Page("/Index", pageHandler: "SaveChanges")"
                 hx-trigger="click"
                 hx-target="#modalContainer"
                 hx-swap="innerHTML">
+            <!-- Initially disabled -->
             <i class="fa fa-save"></i> Save Changes
         </button>
     </div>
@@ -25,14 +26,14 @@
             </div>
         </div>
 
-        <table class="table table-striped" id="customerTable">
-            <thead>
+        <table class="table table-striped table-bordered table-hover" id="customerTable">
+            <thead class="table-light">
                 <tr>
-                    <th>First Name</th>
-                    <th>Surname</th>
-                    <th>Email</th>
-                    <th>Phone Number</th>
-                    <th style="width: 200px;">Actions</th>
+                    <th style="width: 15%;">First Name</th>
+                    <th style="width: 15%;">Surname</th>
+                    <th style="width: 25%;">Email</th>
+                    <th style="width: 15%;">Phone Number</th>
+                    <th style="width: 20%;">Actions</th>
                 </tr>
             </thead>
             <tbody id="customerTableBody">
@@ -60,7 +61,8 @@
         <button class="btn btn-primary btn-block w-100"
                 hx-post="@Url.Page("/Index", pageHandler: "AddCustomer")"
                 hx-target="#customerTableBody"
-                hx-swap="beforeend">
+                hx-swap="beforeend"
+                onclick="checkForUnsavedChanges()">
             <i class="fa fa-plus"></i> Add
         </button>
     </div>
@@ -68,3 +70,5 @@
     <!-- Confirmation Modal Container -->
     <div id="modalContainer"></div>
 </div>
+
+
