--- a/CustmomerManagementClient/Pages/Partials/_CustomerRowPartial.cshtml
+++ b/CustmomerManagementClient/Pages/Partials/_CustomerRowPartial.cshtml
@@ -10,14 +10,16 @@
             <button class="btn btn-secondary btn-sm"
                     hx-post="@Url.Page("/Index", pageHandler: "EditCustomer", values: new { customerId = Model.Id })"
                     hx-target="#customerRow-@Model.Id"
-                    hx-swap="outerHTML">
-                <i class="fa fa-edit"></i> <span class="d-none d-sm-inline">Edit</span>
+                    hx-swap="outerHTML"
+                    aria-label="Edit Customer">
+                <i class="fa fa-edit"></i>
             </button>
             <button class="btn btn-danger btn-sm"
                     hx-post="@Url.Page("/Index", pageHandler: "DeleteCustomer", values: new { customerId = Model.Id })"
                     hx-target="#customerRow-@Model.Id"
-                    hx-swap="outerHTML">
-                <i class="fa fa-trash"></i> <span class="d-none d-sm-inline">Delete</span>
+                    hx-swap="outerHTML"
+                    aria-label="Delete Customer">
+                <i class="fa fa-trash"></i>
             </button>
         </div>
     </td>
