--- a/CustmomerManagementClient/Pages/Index.cshtml
+++ b/CustmomerManagementClient/Pages/Index.cshtml
@@ -7,13 +7,12 @@
 <div class="container">
     <h1 class="my-4">@Model.PageTitle</h1>
 
-    <div class="mb-3">
+    <div class="mb-3 d-flex justify-content-end">
         <button id="saveChangesButton" class="btn btn-success"
                 hx-post="@Url.Page("/Index", pageHandler: "SaveChanges")"
                 hx-trigger="click"
                 hx-target="#modalContainer"
                 hx-swap="innerHTML">
-            <!-- Initially disabled -->
             <i class="fa fa-save"></i> Save Changes
         </button>
     </div>
@@ -29,11 +28,11 @@
         <table class="table table-striped table-bordered table-hover" id="customerTable">
             <thead class="table-light">
                 <tr>
-                    <th style="width: 15%;">First Name</th>
-                    <th style="width: 15%;">Surname</th>
+                    <th style="width: 20%;">First Name</th>
+                    <th style="width: 20%;">Surname</th>
                     <th style="width: 25%;">Email</th>
-                    <th style="width: 15%;">Phone Number</th>
-                    <th style="width: 20%;">Actions</th>
+                    <th style="width: 25%;">Phone Number</th>
+                    <th style="width: 10%;">Actions</th>
                 </tr>
             </thead>
             <tbody id="customerTableBody">
@@ -53,22 +52,25 @@
                     }
                 }
             </tbody>
-        </table>
-    </div>
 
-    <!-- Add Button -->
-    <div class="mb-3">
-        <button class="btn btn-primary btn-block w-100"
-                hx-post="@Url.Page("/Index", pageHandler: "AddCustomer")"
-                hx-target="#customerTableBody"
-                hx-swap="beforeend"
-                onclick="checkForUnsavedChanges()">
-            <i class="fa fa-plus"></i> Add
-        </button>
+            <!-- Add Button Row -->
+            <tfoot>
+                <tr>
+                    <td colspan="5" class="p-0">
+                        <button class="btn btn-primary w-100 rounded-0"
+                                style="border-top-left-radius: 0; border-top-right-radius: 0;"
+                                hx-post="@Url.Page("/Index", pageHandler: "AddCustomer")"
+                                hx-target="#customerTableBody"
+                                hx-swap="beforeend"
+                                onclick="checkForUnsavedChanges()">
+                            <i class="fa fa-plus"></i> Add Customer
+                        </button>
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
     </div>
 
     <!-- Confirmation Modal Container -->
     <div id="modalContainer"></div>
 </div>
-
-
